baseline stats on time average

--- a/code/stats.ipynb
+++ b/code/stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-31T16:28:38.455672Z",
@@ -13,7 +13,7 @@
    "source": [
     "from header import *\n",
     "import psutil\n",
-    "from mne.stats import spatio_temporal_cluster_1samp_test,spatio_temporal_cluster_test\n",
+    "from mne.stats import spatio_temporal_cluster_1samp_test, spatio_temporal_cluster_test, permutation_cluster_1samp_test, permutation_cluster_test\n",
     "from scipy.stats.distributions import f,t\n",
     "from tqdm import tqdm\n",
     "import visbrain\n",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
     "    #    np.savetxt(stat_file+'-'+hemi+'-T_stat.tsv', T_obs[:,int(h):int(i)], delimiter='\\t')\n",
     "    #    np.savetxt(stat_file+'-'+hemi+'-p_val.tsv', mask[:,int(h):int(i)], delimiter='\\t')\n",
     "    #\n",
-    "    return T_obs, clusters, cluster_pv, H0, mask"
+    "    return T_obs, clusters, cluster_pv, H0"
    ]
   },
   {
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,11 +1086,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "T_obs=dict(); clusters=dict(); cluster_pv=dict(); H0=dict(); mask=dict()\n",
+    "T_obs=dict(); clusters=dict(); cluster_pv=dict(); H0=dict(); clu=dict()\n",
     "vertno = np.arange(stc[0].shape[-1]/2, dtype=int)\n",
     "\n",
     "stat_path = op.join(Analysis_path, task, 'meg', 'Stats', 'baseline')\n",
@@ -1100,140 +1100,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stat_fun(H1): min=-6.246160 max=4.544122\n",
-      "Running initial clustering\n",
-      "Found 833 clusters\n",
-      "Permuting 1023 times...\n",
-      "[....................................................        ] 87.84%  \\   "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.6min remaining:  1.6min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[........................................................... ] 99.22%  |   "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.7min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.7min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing cluster p-values\n",
-      "Done.\n",
-      "stat_fun(H1): min=-6.274703 max=4.519974\n",
-      "Running initial clustering\n",
-      "Found 908 clusters\n",
-      "Permuting 1023 times...\n",
-      "[....................................................        ] 86.82%  \\   "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.6min remaining:  1.6min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[........................................................... ] 99.22%  |   Computing cluster p-values\n",
-      "Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.8min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.8min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stat_fun(H1): min=-5.305635 max=4.552568\n",
-      "Running initial clustering\n",
-      "Found 779 clusters\n",
-      "Permuting 1023 times...\n",
-      "[....................................................        ] 86.82%  \\   "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.7min remaining:  1.7min\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[........................................................... ] 99.22%  |   Computing cluster p-values\n",
-      "Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.7min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.7min finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_key = 'RS'\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc[1].loc['RS'].values, stc[0].loc['RS'].values, stat_file=stat_file, test_key=test_key, times=stc[0].time, vertices=vertno, connectivity=connectivity, paired=True)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key] = clu[test_key] = cluster_perm_test(stc[1].loc['RS'].values, stc[0].loc['RS'].values, stat_file=stat_file, test_key=test_key, times=stc[0].time, vertices=vertno, connectivity=connectivity, paired=True)\n",
     "test_key = 'FA'\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc[1].loc['FA'].values, stc[0].loc['FA'].values, stat_file=stat_file, test_key=test_key, times=stc[0].time, vertices=vertno, connectivity=connectivity, paired=True)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key] = clu[test_key] = cluster_perm_test(stc[1].loc['FA'].values, stc[0].loc['FA'].values, stat_file=stat_file, test_key=test_key, times=stc[0].time, vertices=vertno, connectivity=connectivity, paired=True)\n",
     "test_key = 'OM'\n",
-    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc[1].loc['OM'].values, stc[0].loc['OM'].values, stat_file=stat_file, test_key=test_key, times=stc[0].time, vertices=vertno, connectivity=connectivity, paired=True)\n"
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key] = clu[test_key] = cluster_perm_test(stc[1].loc['OM'].values, stc[0].loc['OM'].values, stat_file=stat_file, test_key=test_key, times=stc[0].time, vertices=vertno, connectivity=connectivity, paired=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([ 69,  89, 542]),)"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.where(cluster_pv['RS']<.05)"
+    "def cluster_perm_test1(X1, X2, stat_file, test_key, times=None, vertices=None, mode='a', connectivity='ico5', paired=False):\n",
+    "    \"\"\"\n",
+    "    If paired, test X1-X2.\n",
+    "    Input: arrays of shape (subjects, time, space)\n",
+    "    \"\"\"\n",
+    "    if not isinstance(X2, (np.ndarray, xr.DataArray)):\n",
+    "        X2 = np.zeros(X1.shape)\n",
+    "    \n",
+    "    if type(connectivity) is str:\n",
+    "        connectivity = mne.spatial_tris_connectivity(mne.grade_to_tris(int(connectivity[-1])))\n",
+    "    \n",
+    "    if paired:\n",
+    "        X = X1 - X2\n",
+    "        T_obs, clusters, cluster_pv, H0 = permutation_cluster_1samp_test(X, connectivity=connectivity, n_jobs=4)\n",
+    "    else:\n",
+    "        T_obs, clusters, cluster_pv, H0 = permutation_cluster_test([X1,X2], connectivity=connectivity, n_jobs=4)\n",
+    "    \n",
+    "    p_val = np.ones(T_obs.shape)\n",
+    "    clu_inds = np.zeros(T_obs.shape)\n",
+    "    \n",
+    "    for c,clu in enumerate(clusters):\n",
+    "        p_val[clu] = cluster_pv[c]\n",
+    "        clu_inds[clu] = c+1\n",
+    "    \n",
+    "    if times is not None:\n",
+    "        stats = np.zeros((3, *T_obs.shape))\n",
+    "        stats = xr.DataArray(stats, dims=['data', 'hemisphere', 'time'], coords={'data':['T_stat', 'p_val', 'clu_inds'], 'hemisphere':['left', 'right'], 'time':times})\n",
+    "        stats.loc['T_stat'] = T_obs\n",
+    "        stats.loc['p_val'] = p_val\n",
+    "        stats.loc['clu_inds'] = clu_inds\n",
+    "    \n",
+    "    if vertices is not None:\n",
+    "        stats = np.zeros((3, 2, len(vertices)))\n",
+    "        stats = xr.DataArray(stats, dims=['data', 'hemisphere', 'src'], coords={'data':['T_stat', 'p_val', 'clu_inds'], 'hemisphere':['left', 'right'], 'src':vertices})\n",
+    "        for h,hemi in enumerate(['left', 'right']):\n",
+    "            i = h + 1\n",
+    "            h *= len(vertices)\n",
+    "            i *= len(vertices)\n",
+    "            stats.loc['T_stat', hemi] = T_obs[h:i]\n",
+    "            stats.loc['p_val', hemi] = p_val[h:i]\n",
+    "            stats.loc['clu_inds', hemi] = clu_inds[h:i]\n",
+    "    \n",
+    "    os.makedirs(op.split(stat_file)[0], exist_ok=True)\n",
+    "    if not op.isfile(stat_file):\n",
+    "        mode = 'w'\n",
+    "    \n",
+    "    stats.to_netcdf(path=stat_file, group=test_key, mode=mode)\n",
+    "    \n",
+    "    return T_obs, clusters, cluster_pv, H0"
    ]
   },
   {
@@ -1242,23 +1175,176 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using a threshold of 2.034515\n",
+      "stat_fun(H1): min=-4.642396 max=2.534674\n",
+      "Running initial clustering\n",
+      "Found 139 clusters\n",
+      "Permuting 1023 times...\n",
+      "[........................................................... ] 99.22%  |   "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.2min remaining:  1.2min\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using a threshold of 2.034515\n",
+      "stat_fun(H1): min=-5.524574 max=2.582809\n",
+      "Running initial clustering\n",
+      "Found 139 clusters\n",
+      "Permuting 1023 times...\n",
+      "[........................................................... ] 99.22%  |   "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.2min remaining:  1.2min\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using a threshold of 2.034515\n",
+      "stat_fun(H1): min=-4.250256 max=3.002946\n",
+      "Running initial clustering\n",
+      "Found 177 clusters\n",
+      "Permuting 1023 times...\n",
+      "[........................................................... ] 99.22%  |   "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.2min remaining:  1.2min\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_key = 'RS_t_avg'\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key] = clu[test_key] = cluster_perm_test1(stc[1].loc['RS'].mean(dim='time').values, stc[0].loc['RS'].mean(dim='time').values, stat_file=stat_file, test_key=test_key, vertices=vertno, connectivity=connectivity, paired=True)\n",
+    "test_key = 'FA_t_avg'\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key] = clu[test_key] = cluster_perm_test1(stc[1].loc['FA'].mean(dim='time').values, stc[0].loc['FA'].mean(dim='time').values, stat_file=stat_file, test_key=test_key, vertices=vertno, connectivity=connectivity, paired=True)\n",
+    "test_key = 'OM_t_avg'\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key] = clu[test_key] = cluster_perm_test1(stc[1].loc['OM'].mean(dim='time').values, stc[0].loc['OM'].mean(dim='time').values, stat_file=stat_file, test_key=test_key, vertices=vertno, connectivity=connectivity, paired=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_key = 'RS_avg'\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key] = clu[test_key] = mne.stats.permutation_cluster_1samp_test(stc[1].loc['RS'].mean(dim='time').values - stc[0].loc['RS'].mean(dim='time').values, connectivity=connectivity, n_jobs=4)\n",
+    "test_key = 'FA_avg'\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key] = clu[test_key] = mne.stats.permutation_cluster_1samp_test(stc[1].loc['FA'].mean(dim='time').values - stc[0].loc['FA'].mean(dim='time').values, connectivity=connectivity, n_jobs=4)\n",
+    "test_key = 'OM_avg'\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key] = clu[test_key] = mne.stats.permutation_cluster_1samp_test(stc[1].loc['OM'].mean(dim='time').values - stc[0].loc['OM'].mean(dim='time').values, connectivity=connectivity, n_jobs=4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "<xarray.DataArray (subject: 34, src: 20484)>\n",
-       "array([[2.37306 , 1.696341, 3.529889, ..., 2.886893, 3.207413, 2.751317],\n",
-       "       [2.324931, 1.286636, 1.51721 , ..., 1.233803, 1.103661, 1.174413],\n",
-       "       [2.377474, 1.439882, 2.830985, ..., 2.476919, 1.916404, 1.548704],\n",
+       "<xarray.DataArray (subject: 34, time: 20, src: 20484)>\n",
+       "array([[[ 2.008773,  2.415848, ...,  3.622698,  3.64611 ],\n",
+       "        [ 2.621764,  1.310435, ...,  1.530294,  1.259914],\n",
+       "        ...,\n",
+       "        [ 3.962548,  1.117905, ...,  1.488668,  1.574307],\n",
+       "        [ 4.025879,  1.885759, ...,  1.656659,  1.290358]],\n",
+       "\n",
+       "       [[ 4.133355,  0.232459, ...,  1.052002,  0.278649],\n",
+       "        [ 2.540437,  0.676301, ...,  1.966223,  2.014599],\n",
+       "        ...,\n",
+       "        [ 1.747391,  1.61533 , ...,  0.507072,  0.705719],\n",
+       "        [ 1.883386,  1.496186, ...,  1.206225,  1.12366 ]],\n",
+       "\n",
        "       ...,\n",
-       "       [2.62893 , 1.627037, 2.284074, ..., 3.301421, 3.124422, 3.016373],\n",
-       "       [3.083837, 1.737603, 2.911273, ..., 8.036479, 7.920109, 8.024152],\n",
-       "       [4.240587, 2.741448, 4.787344, ..., 4.448674, 2.132878, 1.897463]])\n",
+       "\n",
+       "       [[10.341312,  1.209733, ..., 10.001292, 13.398304],\n",
+       "        [ 5.835235,  2.712691, ...,  9.20078 , 11.161971],\n",
+       "        ...,\n",
+       "        [ 3.612529,  0.464087, ...,  5.773848,  5.331923],\n",
+       "        [ 4.28245 ,  0.745975, ...,  5.716484,  5.330768]],\n",
+       "\n",
+       "       [[ 1.972293,  3.949046, ...,  2.781159,  2.492463],\n",
+       "        [ 2.52077 ,  4.748508, ...,  3.543824,  3.394486],\n",
+       "        ...,\n",
+       "        [ 4.166091,  0.753249, ...,  1.060799,  1.087189],\n",
+       "        [ 4.014433,  0.360656, ...,  1.256087,  1.342975]]])\n",
        "Coordinates:\n",
        "  * subject  (subject) object '002' '004' '007' '010' '012' '014' '016' ...\n",
+       "  * time     (time) float64 -0.175 -0.17 -0.165 -0.16 -0.155 -0.15 -0.145 ...\n",
        "  * src      (src) object 'lh_0' 'lh_1' 'lh_2' 'lh_3' 'lh_4' 'lh_5' 'lh_6' ...\n",
        "    state    <U2 'RS'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
