baseline average stats

--- a/code/stats.ipynb
+++ b/code/stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-31T16:28:38.455672Z",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1066,12 +1066,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "names = ['T_ECG_included', 'T_ECG_excluded']#'R_ECG_included', 'R_ECG_excluded', \n",
-    "name = names[1]\n",
+    "name = names[0]\n",
     "noise_cov = 'empty_room_cov'\n",
     "sfreq = 200\n",
     "win = (-.175,-.075)#(.1,.2)\n",
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1179,18 +1179,19 @@
      "output_type": "stream",
      "text": [
       "Using a threshold of 2.034515\n",
-      "stat_fun(H1): min=-4.642396 max=2.534674\n",
+      "stat_fun(H1): min=-3.472786 max=3.569783\n",
       "Running initial clustering\n",
-      "Found 139 clusters\n",
-      "Permuting 1023 times...\n",
-      "[........................................................... ] 99.22%  |   "
+      "Found 81 clusters\n",
+      "Permuting 1023 times...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.2min remaining:  1.2min\n"
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  2.0min remaining:  2.0min\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.0min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.0min finished\n"
      ]
     },
     {
@@ -1198,34 +1199,21 @@
      "output_type": "stream",
      "text": [
       "Computing cluster p-values\n",
-      "Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Done.\n",
       "Using a threshold of 2.034515\n",
-      "stat_fun(H1): min=-5.524574 max=2.582809\n",
+      "stat_fun(H1): min=-4.245138 max=2.861377\n",
       "Running initial clustering\n",
-      "Found 139 clusters\n",
-      "Permuting 1023 times...\n",
-      "[........................................................... ] 99.22%  |   "
+      "Found 66 clusters\n",
+      "Permuting 1023 times...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.2min remaining:  1.2min\n"
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  2.2min remaining:  2.2min\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.3min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.3min finished\n"
      ]
     },
     {
@@ -1233,34 +1221,21 @@
      "output_type": "stream",
      "text": [
       "Computing cluster p-values\n",
-      "Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Done.\n",
       "Using a threshold of 2.034515\n",
-      "stat_fun(H1): min=-4.250256 max=3.002946\n",
+      "stat_fun(H1): min=-3.930486 max=3.650433\n",
       "Running initial clustering\n",
-      "Found 177 clusters\n",
-      "Permuting 1023 times...\n",
-      "[........................................................... ] 99.22%  |   "
+      "Found 71 clusters\n",
+      "Permuting 1023 times...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.2min remaining:  1.2min\n"
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  2.0min remaining:  2.0min\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.1min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.1min finished\n"
      ]
     },
     {
@@ -1269,14 +1244,6 @@
      "text": [
       "Computing cluster p-values\n",
       "Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min remaining:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.2min finished\n"
      ]
     }
    ],
@@ -1370,7 +1337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   },
   "toc": {
    "base_numbering": 1,
