beamformer stats viz

--- a/code/stats.ipynb
+++ b/code/stats.ipynb
@@ -500,34 +500,30 @@
      "data": {
       "text/plain": [
        "<xarray.DataArray (state: 3, subject: 34, time: 30, src: 20484)>\n",
-       "array([[[[0.008415, ..., 0.011181],\n",
-       "         ...,\n",
-       "         [0.034438, ..., 0.016494]],\n",
+       "array([[[[ 1.037445, ...,  1.313395],\n",
+       "         ..., \n",
+       "         [ 0.924809, ...,  1.157241]],\n",
        "\n",
-       "        ...,\n",
-       "\n",
-       "        [[0.098985, ..., 0.038413],\n",
-       "         ...,\n",
-       "         [0.066159, ..., 0.073925]]],\n",
-       "\n",
-       "\n",
-       "       ...,\n",
+       "        ..., \n",
+       "        [[ 2.193321, ...,  3.401938],\n",
+       "         ..., \n",
+       "         [ 2.362566, ...,  3.154897]]],\n",
        "\n",
        "\n",
-       "       [[[0.039998, ..., 0.029402],\n",
-       "         ...,\n",
-       "         [0.015048, ..., 0.010873]],\n",
+       "       ..., \n",
+       "       [[[ 2.098647, ...,  0.521874],\n",
+       "         ..., \n",
+       "         [ 0.565686, ...,  0.815951]],\n",
        "\n",
-       "        ...,\n",
-       "\n",
-       "        [[0.01282 , ..., 0.02239 ],\n",
-       "         ...,\n",
-       "         [0.117287, ..., 0.022826]]]])\n",
+       "        ..., \n",
+       "        [[-0.164982, ...,  0.36904 ],\n",
+       "         ..., \n",
+       "         [ 1.63122 , ...,  0.846094]]]])\n",
        "Coordinates:\n",
-       "  * src      (src) object 'lh_0' 'lh_1' 'lh_2' 'lh_3' 'lh_4' 'lh_5' 'lh_6' ...\n",
+       "  * time     (time) float64 0.1 0.105 0.11 0.115 0.12 0.125 0.13 0.135 0.14 ...\n",
        "  * state    (state) object 'RS' 'FA' 'OM'\n",
-       "  * subject  (subject) object '002' '004' '007' '010' '012' '014' '016' ...\n",
-       "  * time     (time) float64 0.1 0.105 0.11 0.115 0.12 0.125 0.13 0.135 0.14 ..."
+       "  * src      (src) object 'lh_0' 'lh_1' 'lh_2' 'lh_3' 'lh_4' 'lh_5' 'lh_6' ...\n",
+       "  * subject  (subject) object '002' '004' '007' '010' '012' '014' '016' ..."
       ]
      },
      "execution_count": 4,
@@ -543,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,11 +588,11 @@
     "    \n",
     "    stats.to_netcdf(path=stat_file, group=test_key, mode=mode)\n",
     "    \n",
-    "    if np.where(clusters_pv <= fif_significance)[0].size:\n",
+    "    if np.where(cluster_pv <= fif_significance)[0].size:\n",
     "        clu_sum = summarize_clusters_stc(clu_all, tstep=1/sfreq, tmin=times[0])\n",
-    "        clu_sum.save(op.splitext(stat_file)[0])\n",
+    "        clu_sum.save(op.splitext(stat_file)[0] + '-' + test_key)\n",
     "    \n",
-    "    return T_obs, clusters, cluster_pv, H0"
+    "    return clu_all"
    ]
   },
   {
@@ -619,21 +615,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'stc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-d32e1b023103>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstart\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mstop\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mvertno\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mstat_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mAnalysis_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtask\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'meg'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Stats'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'{}_{}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstop\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'stc' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start = stc.time.values[0]\n",
     "stop = stc.time.values[-1]\n",
@@ -641,7 +625,14 @@
     "\n",
     "stat_path = op.join(Analysis_path, task, 'meg', 'Stats', '{}_{}'.format(round(start,4),round(stop,4)))\n",
     "os.makedirs(stat_path, exist_ok=True)\n",
-    "stat_file = op.join(stat_path, '{}-{}-surface_{}-{}Hz.nc'.format(name, noise_cov, surface, sfreq))"
+    "stat_file = op.join(stat_path, '{}-{}-surface_{}-{}Hz-beamformer.nc'.format(name, noise_cov, surface, sfreq))\n",
+    "\n",
+    "paired_tests = {'RS_vs_FA':('RS', 'FA', subjects), 'RS_vs_OM':('RS', 'OM', subjects),\n",
+    "         'OM_vs_FA':('OM', 'FA', subjects), 'RS_vs_FA+E':('RS', 'FA', experts),\n",
+    "         'RS_vs_OM+E':('RS', 'OM', experts), 'OM_vs_FA+E':('OM', 'FA', experts),\n",
+    "         'RS_vs_FA+N':('RS', 'FA', novices), 'RS_vs_OM+N':('RS', 'OM', novices),\n",
+    "         'OM_vs_FA+N':('OM', 'FA', novices)}\n",
+    "clu = dict()"
    ]
   },
   {
@@ -733,6 +724,214 @@
    "metadata": {},
    "source": [
     "# States tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stat_fun(H1): min=-3.312425 max=4.769473\n",
+      "Running initial clustering\n",
+      "Found 274 clusters\n",
+      "Permuting 1023 times...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.7min remaining:  1.7min\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.8min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.8min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n",
+      "stat_fun(H1): min=-4.112317 max=6.449883\n",
+      "Running initial clustering\n",
+      "Found 748 clusters\n",
+      "Permuting 1023 times...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.9min remaining:  1.9min\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.0min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.0min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n",
+      "stat_fun(H1): min=-6.711287 max=5.298095\n",
+      "Running initial clustering\n",
+      "Found 680 clusters\n",
+      "Permuting 1023 times...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  2.3min remaining:  2.3min\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.4min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.4min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n",
+      "stat_fun(H1): min=-7.365279 max=9.533201\n",
+      "Running initial clustering\n",
+      "Found 1085 clusters\n",
+      "Permuting 511 times (exact test)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.0min remaining:  1.0min\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.1min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.1min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n",
+      "stat_fun(H1): min=-9.362371 max=9.190606\n",
+      "Running initial clustering\n",
+      "Found 1399 clusters\n",
+      "Permuting 511 times (exact test)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:   55.6s remaining:   55.6s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   57.6s remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   57.6s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n",
+      "Writing STC to disk...\n",
+      "[done]\n",
+      "stat_fun(H1): min=-9.217814 max=8.394035\n",
+      "Running initial clustering\n",
+      "Found 1259 clusters\n",
+      "Permuting 511 times (exact test)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:   49.9s remaining:   49.9s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   51.7s remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:   51.7s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n",
+      "stat_fun(H1): min=-3.871768 max=4.895330\n",
+      "Running initial clustering\n",
+      "Found 351 clusters\n",
+      "Permuting 1023 times...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.4min remaining:  1.4min\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.5min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.5min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n",
+      "stat_fun(H1): min=-5.167691 max=6.805124\n",
+      "Running initial clustering\n",
+      "Found 746 clusters\n",
+      "Permuting 1023 times...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.4min remaining:  1.4min\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.5min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.5min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n",
+      "stat_fun(H1): min=-6.376806 max=5.736199\n",
+      "Running initial clustering\n",
+      "Found 747 clusters\n",
+      "Permuting 1023 times...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.9min remaining:  1.9min\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.9min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.9min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key,val in paired_tests.items():\n",
+    "    clu[key] = cluster_perm_test(stc.loc[val[0],val[2],start:stop].values, stc.loc[val[1],val[2],start:stop].values, stat_file=stat_file, test_key=key, times=stc.loc[:,:,start:stop].time.values, vertices=vertno, connectivity=connectivity, paired=True)"
    ]
   },
   {
